@@ -1,5 +1,5 @@
 MiniUPnP project.
-(c) 2006-2018 Thomas Bernard
+(c) 2006-2019 Thomas Bernard
 Homepage : http://miniupnp.free.fr/
 Mirror: https://miniupnp.tuxfamily.org/
 github: https://github.com/miniupnp/miniupnp
